2003-07-30  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (bfd_section_from_r_symndx): Test for SHN_UNDEF.
	* elf64-ppc.c (get_fdh): New function, split out from
	ppc64_elf_edit_opd.
	(ppc64_elf_check_relocs): Use get_fdh.
	(func_desc_adjust): Likewise.  Tidy.
	(ppc64_elf_edit_opd): Tighten reloc checks.  Free local_syms on error
	exit.  Use get_fdh.  Account for superfluous dynamic relocs.
	(ppc64_elf_relocate_section): Warning fix.

2003-07-30  Jason Eckhardt  <jle@rice.edu>

	* coff-i860.c: Convert to ISO C90.  Remove superflous prototypes.

2003-07-30  Jason Eckhardt  <jle@rice.edu>

	* elf32-i860.c: Convert to ISO C90.  Remove superflous prototypes.

2003-07-30  Randolph Chung  <tausq@debian.org>

	* elf-hppa.h (elf_hppa_relocate_section): Look up dyn_h for undefweak.
	* elf64-hppa.c (elf64_hppa_finalize_dlt): Check h->root.type.

2003-07-30  Alan Modra  <amodra@bigpond.net.au>

	* elf.c: Convert to C90, remove unnecessary prototypes and casts.
	Replace PTR with void *.  Formatting.
	(_bfd_elf_assign_file_position_for_section): Remove INLINE.
	(make_mapping): Likewise.

2003-07-29  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (func_desc_adjust): Give linker created function
	descriptor symbols a size and type.
	(ppc64_elf_relocate_section): Correct lq insn test.

2003-07-28  Eric Christopher  <echristo@redhat.com>

	* elf32-ppc.c (R_PPC_RELAX32): New relocation.
	(ppc_elf_install_value): New function.
	(ppc_elf_sort_rela): Remove.
	(ppc_elf_relax_section): Rewrite. Remove old relaxation
	and replace with out of range branch stubs.
	(ppc_elf_relocate_section): Handle R_PPC_RELAX32.

2003-07-29  Alexandre Oliva  <aoliva@redhat.com>

	* elf-m10300.c (mn10300_elf_relax_section): Take symbol hash table
	from input_bfd.

2003-07-28  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (special_sections): Set attributes for .got and .plt.

2003-07-27  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_adjust_dynamic_symbol): Ensure no copy relocs